@@ -516,6 +516,8 @@ The following extensions are migrated into MediaWiki 1.14:
   protection wasn't allowed 
 * (bug 16626) action=delete now correctly handles empty "reason" param
 * (bug 15579) clshow considers all categories !hidden
+* (bug 16647) list=allcategories, prop=categories don't return "hidden"
+  property for hidden categories
 
 === Languages updated in 1.14 ===
 
